--- a/src/main/resources/templates/presentation.html
+++ b/src/main/resources/templates/presentation.html
@@ -6,42 +6,210 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1 class="p_title">Urbupdate</h1>
-                <p>
-                    Une plate forme au service des collectivités locales et du citoyen disposant de données urbaine
-                    fiables,
-                    indispensable au suivie de l’étalement urbain et à la mise en œuvre des nouvelles politiques de
-                    planification et d’aménagement du territoire.
-                </p>
-                <p>
-                    C’est une application SIG web favorisant l’accès aux données pour le citoyen dans le but de
-                    coproduire une base de données remise à jour en permanence qui suit le rythme de l’étalement urbain
-                    dont l’objectif est de contrecarré un tel processus long, complexe et évolutif qui se produit dans
-                    le cadre de plusieurs systèmes en interaction : social, spatial, économique et politique.
-                </p>
-                <p>
-                    Elle permet de visualiser les données géographiques numériques (représentations des bâtiments,
-                    hydrographie, altitude, réseau viaire, limites administratives, noms de lieux, etc.) mais également
-                    de nombreuses données publiques (occupation du sol, taches urbaines de différentes dates…).
-                </p>
-                <p>
-                    Urbupdate est une infrastructure de services :
-                </p>
-                <div class="urb-liste">
-                    <div class="urb-liste-item">
-                        <i class="fa fa-database"></i>
-                        <span>Un entrepôt de données pour le stockage.</span>
+                <h1 class="p_title">L’étalement urbain </h1>
+                <h2>La périurbanisation </h2>
+                <div class="row">
+                    <div class="col-md-6">
+                        <p>
+                            La périurbanisation n’est pas une simple extension ou « éparpillement» supplémentaire de la
+                            ville ni
+                            un phénomène « naturel » de déversement de la population de la ville-centre dans l’espace
+                            rural
+                            périphérique non plus un mécanisme « classique » de desserrement des activités urbaines qui
+                            affecte
+                            cet espace.
+                        </p>
+                        <p>
+                            La périurbanisation représente un processus long, complexe et évolutif qui se produit dans
+                            le cadre
+                            de plusieurs systèmes en interaction : social, spatial, économique et politique.
+                        </p>
                     </div>
-                    <div class="urb-liste-item">
-                        <i class="fa fa-dashboard"></i>
-                        <span>
-                            Une plateforme pour la préparation et la publication des données.
-                        </span>
+                    <div class="col-md-6 img-container">
+                        <img src="/images/img1.png"/>
                     </div>
-                    <div class="urb-liste-item">
-                        <i class="fa fa-map"></i>
-                        <span>Un géoservices pour la visualisation, le traitement et la mise à jour
-                            des données.</span>
+                </div>
+
+                <h2>Les étapes de l’étalement urbain</h2>
+                <p>
+                    L’émergence du phénomène de «zones floues» ou des « territoires perdus » de la nation des «figures
+                    urbaines », résulte de la conjonction de quatre facteurs:
+                </p>
+                <ul>
+                    <li>La pression des industriels</li>
+                    <li>L’action des promoteurs immobiliers</li>
+                    <li>La gestion du foncier</li>
+                    <li>La ségrégation sociale de l’espace</li>
+                </ul>
+                <h2>Apport du SIG dans l’urbanisme </h2>
+                <p>
+                    La combinaison a pour objectif :
+                </p>
+                <ul>
+                    <li>De construire un espace de géo-connaissance urbaine à travers les outils de la géomantique,
+                        allant de l'acquisition des données jusqu'à la production d'analyse spatiale.
+                    </li>
+                    <li>la continuité méthodologique depuis l'acquisition des données jusqu'à leur exploitation pour
+                        répondre à des thématiques précises au travers d'analyses spatiales.
+                    </li>
+                    <li>la mise en place d'un corpus de connaissance du milieu urbain regroupant à la fois des données,
+                        des mesures, des outils et des méthodologies, accessible et disponible.
+                    </li>
+                </ul>
+                <p>Pour conclure, les outils géomatique sont très complémentaires et permettent à un urbaniste de : </p>
+                <ul>
+                    <li>Améliorer l’analyse morphologique d’une ville.</li>
+                    <li>Mieux suivre le processus d’urbanisation.</li>
+                    <li>Bien choisir l’emplacement des futures extensions urbaines.</li>
+                    <li>Prévoir les catastrophes et les risques et savoir comment les gérées.</li>
+                </ul>
+                <h2>Site et situation </h2>
+                <div class="row">
+                    <div class="col-md-6 img-container">
+                        <img src="/images/grandtunis.png"/>
+                    </div>
+                    <div class="col-md-6">
+                        <p>Couvrant 159 km², notre zone d’étude regroupe deux délégations et une commune et se délimite
+                            par
+                            :</p>
+                        <ul>
+                            <li>
+                                Au Nord par SebkhetEssedjoumi et la délégation d’El Mourouj(gouvernorat de Ben Arous).
+                            </li>
+                            <li>
+                                A l’Est par la délégation de Sidi Hsin (gouvernorat de Tunis) et la délégation d’El
+                                Mornaguia (gouvernorat de La Manouba).
+                            </li>
+                            <li>
+                                A l’Ouest par la délégation de Mornag (gouvernorat de Ben Arous).
+                            </li>
+                            <li>
+                                Au Sud par le gouvernorat de Zaghouan.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <h3>FOUCHENA</h3>
+                        <div class="img-container-small">
+                            <img src="/images/fouchana.png"/>
+                        </div>
+                        <p>Importante délégation industrielle et agricole, Fouchana située sur la route nationale RN3, à
+                            proximité de la localité de M’Hamdia compte en 2014, quelques 66439 habitants dont plus de
+                            60%
+                            résident dans les zones rurales.</p>
+                        <p>La délégation se distingue par:</p>
+                        <ul>
+                            <li>La survivance de l’activité agricole pratiquée sur 2500 hectares dont plus de 50% (1360
+                                ha) sont irrigués.
+                            </li>
+                            <li>La forte présence industrielle impulsée par les nouvelles zones de M’ghira I, II et III
+                            </li>
+                            <li>La faible densité urbaine évaluée à trois logements à l’hectare</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6">
+                        <h3>MHAMEDIA</h3>
+                        <div class="img-container-small">
+                            <img src="/images/mhamdia.png"/>
+                        </div>
+                        <p>
+                            Regroupant 30% (10500 hectares) des terres agricoles du gouvernorat de Ben Arous, la
+                            délégation
+                            de Mohamedia à l’instar de Mornag est de vacation principalement agricole.
+                        </p>
+                        <p>La délégation de Mohamedia se caractérise par:</p>
+                        <ul>
+                            <li>Un milieu naturel propice à l’activité agricole</li>
+                            <li>Une bonne accessibilité à partir de la route nationale RN3</li>
+                            <li>Une très faible densité urbaine de un logement à l’hectare et 428 habitants au km²</li>
+                            <li>Une présence de population rurale de 6495 habitants soit près de 15% de la population
+                                totale
+                            </li>
+                            <li>Une faiblesse de l’activité industrielle (11 entreprises) compensée par la proximité du
+                                pôle industriel de M’Ghira.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3>COMMUNE MHAMEDIA-FOUCHENA</h3>
+                        <div class="row">
+                            <div class="col-md-6 img-container">
+                                <img src="/images/commune.png"/>
+                            </div>
+                            <div class="col-md-6">
+                                <p>M’HamdiaFouchana est promue au rang communal le 2 octobre 1981 d’une superficie du
+                                    périmètre
+                                    communal de 12.5 km², avec un Plan d’Aménagement urbain qui couvre une superficie de
+                                    725
+                                    Hectares approuvé par Décret n° 2331 du 16/11/1993.</p>
+                                <p>
+                                    Située sur la route nationale RN3 reliant M’Hamdia Fouchana à Tunis et au reste du
+                                    pays
+                                    avec
+                                    une population de 106167 habitants et d’un parc logement de 31345 logements selon le
+                                    recensement de 2014.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <h2>Développement de Mhamdia-Fouchena</h2>
+                <p>Avant de comprendre les faits territoriaux composés et cumulés depuis l'apparition des premières
+                    installations, on doit préciser que l'évolution du statut administratif de la zone suivait son
+                    évolution naturelle et spatiale. Effectivement, son annexion au gouvernorat de Ben Arous en 1985 a
+                    été précédée par la création de la délégation Mohammedia-Fouchana en 1979 avant sa division en deux
+                    délégations distinctes (Focuhanaet El Mhammdia) puis la création de la commune Mohammedia Fouchana
+                    en 1981.</p>
+                <p>
+                    L'aménagement de la zone industrielle de M'ghira par l'AFI remonte à la décision de création de 35
+                    nouvelles zones industrielles à moyen et long terme réparties sur l'ensemble du territoire national.
+                    Le site de M'ghira figure parmi les 7 zones industrielles prioritaires sur le littoral dans le but
+                    de satisfaire le nombre important des demandes en terrains industriels.
+                </p>
+                <p>
+                    La décision de création de la Zone industrielle de M'ghira a été prise dans un contexte où le
+                    district de Tunis connaissait un afflux important de projets en dépit des mesures d’incitation à la
+                    décentralisation. La saturation des zones industrielles et l’inexistence de nouvelles zones
+                    aménagées depuis 1980, conduisait les entreprises à s’implanter d’une manière diffuse dans des zones
+                    non aménagées à l’intérieur du tissu urbain.
+                </p>
+                <p>On visait, à cet égard, par l'implantation de la zone industrielle de M'ghira, l’ajustement des
+                    disparités en rééquilibrant les fonctions habitat et emplois, la redistribution des emplois
+                    tertiaires dans le district au profit de la zone Sud et la préservation des terres agricoles contre
+                    l’expansion anarchique. Le choix fut impulsé, en outre, par les avantages liés à la proximité de la
+                    ville de Tunis du point de vue du marché, à la disponibilité d’une main d’œuvre qualifiée, à
+                    l’accessibilité, aux divers services.</p>
+                <div class="img-container-small">
+                    <img src="/images/évolution.png"/>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 img-title">
+                        <p>Evolution urbaine entre 2002 et 2014</p>
+                    </div>
+                </div>
+                <p>Les périphéries se distinguent les unes des autres pas la qualité de leur tissu urbain, la trame
+                    routière parfois plus dense ou moins dense, la densité de la végétation, et autres critères qui
+                    permettent d’observer des déséquilibres socio-économiques et sociopolitiques dans
+                    l’agglomération.</p>
+                <p>Cette urbanisation extensive se produit souvent dans un contexte de désorganisation urbaine de faible
+                    densité qui aura des conséquences majeures sur l’environnement et la population. La plus visible et
+                    la plus marquante étant le recul des terres agricoles autour des grandes villes sur lesquelles
+                    s’exerce une spéculation foncière. </p>
+                <p>Cette dernière attire une population à la recherche d’opportunités d’emploi et d’établissement
+                    fonciers ce qui favorise ainsi l’implantation de quartiers à l’extérieurs du périmètre urbain et par
+                    le fait même en dehors des zones légiférés en matière d’occupation du sol. Les premiers noyaux de
+                    développement créent dans un premier temps des friches sociales côtoyant des lots agricoles
+                    disparates pour finalement être occupés par l’habitat au fil des années.</p>
+                <div class="img-container-small">
+                    <img src="/images/occupationdusol.png"/>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 img-title">
+                        <p>Occupation de sol</p>
                     </div>
                 </div>
             </div>
