--- a/src/main/resources/assets/sass/_presentation.scss
+++ b/src/main/resources/assets/sass/_presentation.scss
@@ -8,34 +8,52 @@
         align-items: center;
         justify-content: center;
         flex-wrap: wrap;
+        h1, h2 {
+          flex-basis: 100%;
+        }
+        h2 {
+          color: #2da6c4;
+          margin-bottom: 25px;
+        }
+        h3 {
+          margin-bottom: 25px;
+        }
+        ul {
+          flex-basis: 100%;
+          font-size: 1.1em;
+          list-style: circle;
+          margin-left: 100px;
+        }
         p {
           flex-basis: 100%;
           font-size: 1.1em;
-          text-align: center;
-        }
-        .urb-liste {
-          display: flex !important;
-          .urb-liste-item {
-            margin: 15px !important;
-            border: 1px solid #dddddd !important;
-            padding: 15px !important;
-            flex-basis: 30%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            i {
-              font-size: 2em;
-              margin-bottom: 20px;
-              color: $primary-color;
-            }
-            span {
-              text-align: center;
-            }
-          }
         }
         .p_title {
+          margin-top: 65px;
           color: #3F3F3F;
+        }
+        .img-container {
+          img {
+            width: 100%;
+            margin-bottom: 20px;
+          }
+        }
+        .img-container-small {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          img {
+            width: 60%;
+            margin-bottom: 20px;
+          }
+        }
+        .img-title {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+          margin-bottom: 24px;
+          font-weight: bold;
         }
       }
     }
