--- a/src/main/resources/templates/claims/index.html
+++ b/src/main/resources/templates/claims/index.html
@@ -5,7 +5,7 @@
 <main layout:fragment="page">
     <div id="claims">
         <div class="container claims">
-            <div class="row">
+            <div class="row" style="background-color: white">
                 <div class="col-md-3 form-group">
                     <label for="title" class="col-md-4 control-label">Type</label>
                     <div class="col-md-8">
